# dmm-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: dmm-tools.desktop
crates/dmm-cli/: Cargo.toml  build.rs
crates/dmm-cli/src/: capture.rs  format.rs  main.rs
crates/dmm-gui/: Cargo.toml
crates/dmm-gui/src/: a11y.rs  changelog.rs  display.rs  graph.rs  main.rs  recording.rs  settings.rs  specs.rs  theme.rs
crates/dmm-gui/src/app/: connection.rs  controls.rs  mod.rs
crates/dmm-lib/: Cargo.toml
crates/dmm-lib/examples/: dump_specs.rs  enumerate.rs  get_name.rs  handshake.rs  read_once.rs
crates/dmm-lib/src/: ch9329.rs  cp2110.rs  error.rs  flags.rs  lib.rs  measurement.rs  mock.rs  specs.rs  stats.rs  stream.rs  wall_clock.rs
crates/dmm-lib/src/protocol/: framing.rs  mod.rs  vc8x0_common.rs
crates/dmm-lib/src/protocol/fs9721/: mod.rs
crates/dmm-lib/src/protocol/ut171/: mod.rs
crates/dmm-lib/src/protocol/ut181a/: mod.rs
crates/dmm-lib/src/protocol/ut61eplus/: command.rs  mod.rs  mode.rs
crates/dmm-lib/src/protocol/ut61eplus/tables/: mod.rs  specs_ut61b_plus.rs  specs_ut61d_plus.rs  specs_ut61e_plus.rs  ut61d_plus.rs
crates/dmm-lib/src/protocol/ut8802/: mod.rs
crates/dmm-lib/src/protocol/ut8803/: mod.rs
crates/dmm-lib/src/protocol/vc880/: mod.rs
crates/dmm-lib/src/protocol/vc890/: mod.rs
crates/dmm-lib/tests/: golden_tests.rs
crates/dmm-lib/tests/golden/ut61eplus/: dcv_5.678.yaml  ncv_3.yaml  ohm_overload.yaml
crates/dmm-settings/: Cargo.toml
crates/dmm-settings/src/: lib.rs
crates/ut61eplus-cli/: Cargo.toml  build.rs
crates/ut61eplus-cli/src/: capture.rs  format.rs  main.rs
crates/ut61eplus-gui/: Cargo.toml
crates/ut61eplus-gui/src/: app.rs  display.rs  graph.rs  main.rs  recording.rs  settings.rs  specs.rs  theme.rs
crates/ut61eplus-gui/src/app/: connection.rs  controls.rs  mod.rs
crates/ut61eplus-lib/: Cargo.toml
crates/ut61eplus-lib/examples/: enumerate.rs  get_name.rs  handshake.rs  read_once.rs
crates/ut61eplus-lib/src/: ch9325.rs  ch9329.rs  cp2110.rs  error.rs  flags.rs  lib.rs  measurement.rs  mock.rs  mode.rs  protocol.rs  qinheng.rs  transport.rs
crates/ut61eplus-lib/src/protocol/: framing.rs  mod.rs  registry.rs
crates/ut61eplus-lib/src/protocol/fs9721/: mod.rs
crates/ut61eplus-lib/src/protocol/ut171/: mod.rs
crates/ut61eplus-lib/src/protocol/ut181a/: mod.rs
crates/ut61eplus-lib/src/protocol/ut61eplus/: mod.rs
crates/ut61eplus-lib/src/protocol/ut61eplus/tables/: mod.rs  ut61b_plus.rs  ut61e_plus.rs
crates/ut61eplus-lib/src/protocol/ut8802/: mod.rs
crates/ut61eplus-lib/src/protocol/ut8803/: mod.rs
crates/ut61eplus-lib/src/protocol/vc880/: mod.rs
crates/ut61eplus-lib/src/protocol/vc890/: mod.rs
crates/ut61eplus-lib/src/tables/: ut61e_plus.rs
crates/ut61eplus-lib/tests/: golden_tests.rs
docs/: adding-devices.md  architecture-review-data-flow.md  architecture.md  cli-reference.md  development.md  egui-upstream-opportunities.md  future-improvements.md  gui-reference.md  protocol.md  setup.md  supported-devices.md  ux-design.md  verification-backlog.md
docs/research/: android-port.md  new-device-candidates.md
docs/research/uci-bench-family/: reverse-engineered-protocol.md  reverse-engineering-approach.md
docs/research/ut171/: reverse-engineered-protocol.md  reverse-engineering-approach.md
docs/research/ut181/: ch9329-test-plan.md  draft-issue5-reply.md  reverse-engineered-protocol.md  reverse-engineering-approach.md
docs/research/ut61-family/: reverse-engineered-protocol.md  reverse-engineering-approach.md
docs/research/ut61b-plus/: reverse-engineered-protocol.md  reverse-engineering-approach.md
docs/research/ut61d-plus/: reverse-engineered-protocol.md  reverse-engineering-approach.md
docs/research/ut61eplus/: protocol-comparison.md  reverse-engineered-protocol.md  reverse-engineering-approach.md
docs/research/ut803/: reverse-engineered-protocol.md  reverse-engineering-approach.md
docs/research/ut8803/: reverse-engineered-protocol.md  reverse-engineering-approach.md
docs/research/vc880/: implementation-plan.md  reverse-engineered-protocol.md  reverse-engineering-approach.md
docs/research/vc890/: reverse-engineered-protocol.md
git-hooks/: pre-commit
udev/: 99-cp2110-unit.rules  99-dmm-tools.rules
