[package]
name = "dmm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for UNI-T and Voltcraft digital multimeters"

[[bin]]
name = "dmm-cli"
path = "src/main.rs"

[dependencies]
dmm-lib = { path = "../dmm-lib" }
dmm-settings = { path = "../dmm-settings" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
ctrlc = "3"
log = "0.4"
console = "0.16"
serde_yaml_ng = "0.10"

[dev-dependencies]
dmm-lib = { path = "../dmm-lib", features = ["test-support"] }
