[package]
name = "dmm-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Library for communicating with UNI-T and Voltcraft digital multimeters via CP2110, CH9329, and CH9325 HID bridges"

[dependencies]
thiserror = "2"
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2.6", features = ["linux-static-hidraw"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
hidapi = { version = "2.6" }

[features]
test-support = []

[dev-dependencies]
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
