[package]
name = "ut61eplus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the UNI-T UT61E+ multimeter"

[[bin]]
name = "ut61eplus"
path = "src/main.rs"

[dependencies]
ut61eplus-lib = { path = "../ut61eplus-lib" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
ctrlc = "3"
log = "0.4"
console = "0.16"
serde_yaml_ng = "0.10"

[dev-dependencies]
ut61eplus-lib = { path = "../ut61eplus-lib", features = ["test-support"] }
